Added categories section

--- a/index.html
+++ b/index.html
@@ -30,8 +30,60 @@
                 </div>
             </div>
         </header>
-        <div class="content"></div>
-        <footer class="footer"></footer>
+        <div class="content">
+            <section class="categories">
+                <div class="categories__body">
+                    <div class="categories__row">
+                        <div class="categories__item">
+                            <div class="categories__itemColumn">
+                                <div class="categories__itemImageContainer">
+                                    <img class="categories__itemImage" src="/img/categories/01.png" alt="Ooops!">
+                                </div>
+                                    <div class="categories__itemTitle title">PROFESIONALS</div>
+                                    <div class="categories__underline"></div>
+                                    <div class="categories__itemDescription description">Lorem ipsum dolor sit amet consectetur elit.</div>
+                            </div>
+                        </div>
+                        <div class="categories__item">
+                            <div class="categories__itemColumn">
+                                <div class="categories__itemImageContainer">
+                                    <img class="categories__itemImage" src="/img/categories/02.png" alt="Ooops!">
+                                </div>
+                                <div class="categories__itemTitle title">AMATEURS</div>
+                                <div class="categories__underline"></div>
+                                <div class="categories__itemDescription description">Lorem ipsum dolor sit amet consectetur elit.</div>
+                            </div>
+                        </div>
+                        <div class="categories__item">
+                            <div class="categories__itemColumn">
+                                <div class="categories__itemImageContainer">
+                                    <img class="categories__itemImage" src="/img/categories/03.png" alt="Ooops!">
+                                </div>
+                                <div class="categories__itemTitle title">FOR EVERYONE</div>
+                                <div class="categories__underline"></div>
+                                <div class="categories__itemDescription description">Lorem ipsum dolor sit amet consectetur elit.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <footer class="footer">
+            <div class="container">
+                <div class="footer__row">
+                    <div class="footer__copyright">
+                        <div class="footer__copyrightText"><span>Elenea©</span> copyright 2013 - Unsubscribe here</div>
+                    </div>
+                    <div class="footer__socialMedias">
+                        <div class="footer__socialMediasIcons">
+                            <a href="https://www.google.com"><i class="fab fa-google-plus-g footer__socialMediasIcons"></i></a>
+                            <a href="https://www.facebook.com"><i class="fab fa-facebook-f footer__socialMediasIcons"></i></a>
+                            <a href="https://www.twitter.com"><i class="fab fa-twitter footer__socialMediasIcons"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
