Added article's block

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <div class="header__body">
+            <div class="content__body">
                 <div class="header__column">
                     <div class="header__logoTitle">Elena</div>
                     <nav class="header__navigation">
@@ -32,7 +32,7 @@
         </header>
         <div class="content">
             <section class="categories">
-                <div class="categories__body">
+                <div class="content__body">
                     <div class="categories__row">
                         <div class="categories__item">
                             <div class="categories__itemColumn">
@@ -40,7 +40,7 @@
                                     <img class="categories__itemImage" src="/img/categories/01.png" alt="Ooops!">
                                 </div>
                                     <div class="categories__itemTitle title">PROFESIONALS</div>
-                                    <div class="categories__underline"></div>
+                                    <div class="categories__underline underline"></div>
                                     <div class="categories__itemDescription description">Lorem ipsum dolor sit amet consectetur elit.</div>
                             </div>
                         </div>
@@ -50,7 +50,7 @@
                                     <img class="categories__itemImage" src="/img/categories/02.png" alt="Ooops!">
                                 </div>
                                 <div class="categories__itemTitle title">AMATEURS</div>
-                                <div class="categories__underline"></div>
+                                <div class="categories__underline underline"></div>
                                 <div class="categories__itemDescription description">Lorem ipsum dolor sit amet consectetur elit.</div>
                             </div>
                         </div>
@@ -60,11 +60,43 @@
                                     <img class="categories__itemImage" src="/img/categories/03.png" alt="Ooops!">
                                 </div>
                                 <div class="categories__itemTitle title">FOR EVERYONE</div>
-                                <div class="categories__underline"></div>
+                                <div class="categories__underline underline"></div>
                                 <div class="categories__itemDescription description">Lorem ipsum dolor sit amet consectetur elit.</div>
                             </div>
                         </div>
                     </div>
+                </div>
+            </section>
+            <section class="articles">
+                <div class="content__body">
+                   <div class="articles__row">
+                       <div class="articles__item">
+                           <div class="articles__itemColumn">
+                               <div class="articles__itemImageContainer">
+                                   <img class="articles__itemImage" src="/img/articles/01.png" alt="Ooops!">
+                               </div>
+                               <div class="articles__itemTitle title">Responsive email template</div>
+                               <div class="articles__underline underline"></div>
+                               <div class="articles__itemDescription description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis</div>
+                               <div class="articles__rmbWrapper">
+                                   <a href="#" class="articles__rmb button rmb">Read more</a>
+                               </div>
+                           </div>
+                       </div>
+                       <div class="articles__item">
+                           <div class="articles__itemColumn">
+                               <div class="articles__itemImageContainer">
+                                   <img class="articles__itemImage" src="/img/articles/02.png" alt="Ooops!">
+                               </div>
+                               <div class="articles__itemTitle title">Fully compatible template</div>
+                               <div class="articles__underline underline"></div>
+                               <div class="articles__itemDescription description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis</div>
+                               <div class="articles__rmbWrapper">
+                                   <a href="#" class="articles__rmb button rmb">Read more</a>
+                               </div>
+                           </div>
+                       </div>
+                   </div>
                 </div>
             </section>
         </div>
