--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
                    </div>
                 </div>
             </section>
+            <section class="support">
+                <div class="content__body">
+                    <div class="support__item">
+                        <div class="support__title title"><i class="far fa-life-ring support__icon"></i>Fully Supported template</div>
+                        <div class="support__underline underline"></div>
+                        <div class="support__description description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adip
+                            iscing lorem commodo vitae. Ut semper semper lacus. Suspendisse convallis vel tellus at consectetur. Aenean risus arcu</div>
+                        <div class="articles__rmbWrapper">
+                            <a href="#" class="rmb support__rmb button ">Read more</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
         <footer class="footer">
             <div class="container">
