Added benefit's block

--- a/index.html
+++ b/index.html
@@ -112,6 +112,45 @@
                     </div>
                 </div>
             </section>
+            <section class="benefits">
+                <div class="content__body">
+                    <div class="benefits__row">
+                        <div class="benefits__item">
+                            <div class="benefits__itemColumn">
+                                <div class="benefits__itemImageContainer">
+                                    <img class="benefits__itemImage" src="/img/benefits/01.png" alt="Ooops!">
+                                </div>
+                                <div class="benefits__itemTitle title">FULLY Layered PSD</div>
+                                <div class="benefits__underline underline"></div>
+                                <div class="benefits__itemDescription description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                                <a href="#" class="benefits__checkButton">Check this out  ></a>
+                            </div>
+                        </div>
+                        <div class="benefits__item">
+                            <div class="benefits__itemColumn">
+                                <div class="benefits__itemImageContainer">
+                                    <img class="benefits__itemImage" src="/img/benefits/02.png" alt="Ooops!">
+                                </div>
+                                <div class="benefits__itemTitle title">FUll Compatibility</div>
+                                <div class="benefits__underline underline"></div>
+                                <div class="benefits__itemDescription description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                                <a href="#" class="benefits__checkButton">Check this out  ></a>
+                            </div>
+                        </div>
+                        <div class="benefits__item">
+                            <div class="benefits__itemColumn">
+                                <div class="benefits__itemImageContainer">
+                                    <img class="benefits__itemImage" src="/img/benefits/03.png" alt="Ooops!">
+                                </div>
+                                <div class="benefits__itemTitle title">very great modules</div>
+                                <div class="benefits__underline underline"></div>
+                                <div class="benefits__itemDescription description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                                <a href="#" class="benefits__checkButton">Check this out  ></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
         <footer class="footer">
             <div class="container">
