--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <div class="support__underline underline"></div>
                         <div class="support__description description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adip
                             iscing lorem commodo vitae. Ut semper semper lacus. Suspendisse convallis vel tellus at consectetur. Aenean risus arcu</div>
-                        <div class="articles__rmbWrapper">
+                        <div class="support__rmbWrapper">
                             <a href="#" class="rmb support__rmb button ">Read more</a>
                         </div>
                     </div>
@@ -146,6 +146,28 @@
                                 <div class="benefits__underline underline"></div>
                                 <div class="benefits__itemDescription description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
                                 <a href="#" class="benefits__checkButton">Check this out  ></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="prompting">
+                <div class="content__body">
+                    <div class="prompting__row">
+                        <div class="prompting__item">
+                            <div class="prompting__title title"><i class="fab fa-telegram-plane prompting__icon"></i>SEND IT NOW</div>
+                            <div class="prompting__underline underline"></div>
+                            <div class="prompting__description description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem.</div>
+                            <div class="prompting__rmbWrapper">
+                                <a href="#" class="rmb prompting__rmb button ">Read more</a>
+                            </div>
+                        </div>
+                        <div class="prompting__item">
+                            <div class="prompting__title title"><i class="fas fa-pencil-alt prompting__icon"></i>VERY NICE TO SEE</div>
+                            <div class="prompting__underline underline"></div>
+                            <div class="prompting__description description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem.</div>
+                            <div class="prompting__rmbWrapper">
+                                <a href="#" class="rmb prompting__rmb button ">Read more</a>
                             </div>
                         </div>
                     </div>
