added forYou block

--- a/index.html
+++ b/index.html
@@ -173,6 +173,23 @@
                     </div>
                 </div>
             </section>
+            <section class="forYou">
+                <div class="content__body">
+                    <div class="forYou__row">
+                        <div class="forYou__imageWrapper">
+                            <img class="forYou__image" src="img/fourYou/01.png" alt="Ooops!">
+                        </div>
+                        <div class="forYou__item">
+                            <div class="forYou__title title">JUST FOR YOU ON THEMEFOREST</div>
+                            <div class="forYou__underline underline"></div>
+                            <div class="forYou__description description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis risus, in mattis erat convallis egestas.</div>
+                            <div class="forYou__rmbWrapper">
+                                <a href="#" class="rmb forYou__rmb button ">Read more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
         <footer class="footer">
             <div class="container">
