Added partner's block

--- a/index.html
+++ b/index.html
@@ -190,6 +190,20 @@
                     </div>
                 </div>
             </section>
+            <section class="partners">
+                <div class="content__body">
+                    <div class="partners__column">
+                        <div class="title partners__title"><i class="far fa-star partners__icon"></i>this template was featured on</div>
+                        <div class="partners__underline underline"></div>
+                    </div>
+                    <div class="partners__row">
+                        <div class="partners__item partners__p1">TechCrunch</div>
+                        <div class="partners__item partners__p2">Promail</div>
+                        <div class="partners__item partners__p3">Mashable</div>
+                        <div class="partners__item partners__p4">atlaspix</div>
+                    </div>
+                </div>
+            </section>
         </div>
         <footer class="footer">
             <div class="container">
