Added adaptive for all rest blocks.

--- a/index.html
+++ b/index.html
@@ -106,12 +106,14 @@
             <section class="support">
                 <div class="content__body">
                     <div class="support__item">
-                        <div class="support__title title"><i class="far fa-life-ring support__icon"></i>Fully Supported template</div>
-                        <div class="support__underline underline"></div>
-                        <div class="support__description description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adip
-                            iscing lorem commodo vitae. Ut semper semper lacus. Suspendisse convallis vel tellus at consectetur. Aenean risus arcu</div>
-                        <div class="support__rmbWrapper">
-                            <a href="#" class="rmb support__rmb button ">Read more</a>
+                        <div class="support__itemColumn">
+                            <div class="titleBox"><div class="support__title title"><i class="far fa-life-ring support__icon"></i>Fully Supported template</div></div>
+                            <div class="support__underline underline"></div>
+                            <div class="support__description description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adip
+                                iscing lorem commodo vitae. Ut semper semper lacus. Suspendisse convallis vel tellus at consectetur. Aenean risus arcu</div>
+                            <div class="support__rmbWrapper">
+                                <a href="#" class="rmb support__rmb button ">Read more</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -159,19 +161,23 @@
                 <div class="content__body">
                     <div class="prompting__row">
                         <div class="prompting__item">
-                            <div class="prompting__title title"><i class="fab fa-telegram-plane prompting__icon"></i>SEND IT NOW</div>
-                            <div class="prompting__underline underline"></div>
-                            <div class="prompting__description description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem.</div>
-                            <div class="prompting__rmbWrapper">
-                                <a href="#" class="rmb prompting__rmb button ">Read more</a>
+                            <div class="prompting__itemColumn">
+                                <div class="prompting__title title"><i class="fab fa-telegram-plane prompting__icon"></i>SEND IT NOW</div>
+                                <div class="prompting__underline underline"></div>
+                                <div class="prompting__description description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem.</div>
+                                <div class="prompting__rmbWrapper">
+                                    <a href="#" class="rmb prompting__rmb button ">Read more</a>
+                                </div>
                             </div>
                         </div>
                         <div class="prompting__item">
-                            <div class="prompting__title title"><i class="fas fa-pencil-alt prompting__icon"></i>VERY NICE TO SEE</div>
-                            <div class="prompting__underline underline"></div>
-                            <div class="prompting__description description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem.</div>
-                            <div class="prompting__rmbWrapper">
-                                <a href="#" class="rmb prompting__rmb button ">Read more</a>
+                            <div class="prompting__itemColumn">
+                                <div class="prompting__title title"><i class="fas fa-pencil-alt prompting__icon"></i>VERY NICE TO SEE</div>
+                                <div class="prompting__underline underline"></div>
+                                <div class="prompting__description description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem.</div>
+                                <div class="prompting__rmbWrapper">
+                                    <a href="#" class="rmb prompting__rmb button ">Read more</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -184,11 +190,13 @@
                             <img class="forYou__image" src="img/fourYou/01.png" alt="Ooops!">
                         </div>
                         <div class="forYou__item">
-                            <div class="forYou__title title">JUST FOR YOU ON THEMEFOREST</div>
-                            <div class="forYou__underline underline"></div>
-                            <div class="forYou__description description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis risus, in mattis erat convallis egestas.</div>
-                            <div class="forYou__rmbWrapper">
-                                <a href="#" class="rmb forYou__rmb button ">Read more</a>
+                            <div class="forYou__itemColumn">
+                                <div class="forYou__title title">JUST FOR YOU ON THEMEFOREST</div>
+                                <div class="forYou__underline underline"></div>
+                                <div class="forYou__description description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis risus, in mattis erat convallis egestas.</div>
+                                <div class="forYou__rmbWrapper">
+                                    <a href="#" class="rmb forYou__rmb button ">Read more</a>
+                                </div>
                             </div>
                         </div>
                     </div>
